<resources>
    <string name="app_name">Smile Karaoke</string>
    <string name="fileString">File</string>
    <string name="accessExternalStoragePermissionDeniedString">Storage Permission Denied</string>
    <string name="noReadableExternalStorageString">No readable external storage</string>
    <string name="autoPlayString">Auto Play</string>
    <string name="openString">Open</string>
    <string name="closeString">Close</string>
    <string name="privacyPolicyString">Privacy Policy</string>
    <string name="exitString">Exit</string>
    <string name="actionString">Action</string>
    <string name="playString">Play</string>
    <string name="pauseString">Pause</string>
    <string name="stopString">Stop</string>
    <string name="replayString">Replay</string>
    <string name="fforwardString">Fast-Forward</string>
    <string name="rewindString">Rewind</string>
    <string name="toTVString">To TV</string>
    <string name="volumeString">Volume</string>
    <string name="audioString">Audio</string>
    <string name="audioTrackString">Track</string>
    <string name="audioTrack1String">Track 1</string>
    <string name="audioTrack2String">Track 2</string>
    <string name="audioTrack3String">Track 3</string>
    <string name="audioTrack4String">Track 4</string>
    <string name="audioTrack5String">Track 5</string>
    <string name="audioTrack6String">Track 6</string>
    <string name="audioTrack7String">Track 7</string>
    <string name="audioTrack8String">Track 8</string>
    <string name="videoTrackString">Track</string>
    <string name="channelString">Channel</string>
    <string name="leftChannelString">Left</string>
    <string name="rightChannelString">Right</string>
    <string name="stereoChannelString">Stereo</string>
    <string name="formatNotSupportedString">Error or not Supported.</string>
    <string name="my_favorites">My Favorites</string>
    <string name="titleWithColonString">Title:</string>
    <string name="filePathWithColonString">Path:</string>
    <string name="musicTrackWithColonString">Music Track:</string>
    <string name="vocalTrackWithColonString">vocal Track:</string>
    <string name="musicChannelWithColonString">Music Channel:</string>
    <string name="vocalChannelWithColonString">vocal Channel:</string>
    <string name="includedPlayListColonString">In Playlist:</string>
    <string name="addString">Add</string>
    <string name="editString">Edit</string>
    <string name="deleteString">Delete</string>
    <string name="no_my_favorites">No Favorites</string>
    <string name="noFilesSelectedString">No files selected</string>
    <string name="bufferingString">Buffering .....</string>
    <string name="saveString">Save</string>
    <string name="backKeyToExitApp">Press the back key again to exit.</string>
    <string name="musicString">Music</string>
    <string name="vocalString">Vocal</string>
    <string name="titileEmptyString">Title is empty</string>
    <string name="filepathEmptyString">File path is empty</string>
    <string name="notSeekableSongString">Unable to forward and backward</string>
    <string name="musicAndVocalNotSet">No setting on Music or Vocal</string>
    <string name="noPreviousSongString">No previous</string>
    <string name="noNextSongString">No next</string>
    <string name="no_chromecast_devices_avaiable">No ChromeCast devices available</string>
    <string name="chromecast_not_connected">Chromecast is not connected</string>
    <string name="chromecast_is_connecting">Chromecast is connecting</string>
    <string name="chromecast_is_connected">Chromecast is connected</string>
    <string name="guessedAudioTrackValue">Audio tracks are guessed values,\nNeed to confirm.</string>
    <string name="duplicate_in_database">Duplicate in database</string>
    <string name="play_video">Video</string>
    <string name="open_files">Open</string>
    <string name="unknown">Unkonwn</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="excess_max">Excess Max</string>
</resources>
